--- a/src/app/admin/app.css
+++ b/src/app/admin/app.css
@@ -1,5 +1,26 @@
 
-#body_Admin{
-    /* background: #E5E5E5; */
-    background-color: blue;
+
+:root {
+  --background: #6b1c1c;
+  --foreground: #171717;
+}
+
+@theme inline {
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --font-sans: var(--font-geist-sans);
+  --font-mono: var(--font-geist-mono);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: #0a0a0a;
+    --foreground: #751818;
+  }
+}
+
+body {
+  background: var(--background);
+  color: var(--foreground);
+  font-family: Arial, Helvetica, sans-serif;
 }
