--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,13 @@
   text-align: left !important;
 }
 
+
+
+/*  */
+/* @media screen and (min-width:850px ) {
+#teacher-grid{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+}
+} */
