--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,9 @@
   text-align: left !important;
 }
 
-
+body {
+  font-family: var(--font-inter), sans-serif;
+}
 
 /*  */
 /* @media screen and (min-width:850px ) {
